<resources>
    <string name="app_name">MEBP</string>
    <string name="settings">Тохиргоо</string>
    <string name="app_name_full">Мал эмнэлгийн бүртгэлийн программ</string>
    <string name="login">Нэвтрэх</string>
    <string name="logout">Гарах</string>
    <string name="forgot_password">Нууц үгээ мартсан уу?</string>
    <string name="username">Хэрэглэгчийн нэр*</string>
    <string name="password">Нууц үг*</string>
    <string name="repeat_password">Нууц үг давтах*</string>
    <string name="lastname">Овог*</string>
    <string name="firstname">Нэр*</string>
    <string name="emch_code">Эмчийн код*</string>
    <string name="aimag_niislel">Аймаг/Нийслэл*</string>
    <string name="sum_duureg">Сум/Дүүрэг*</string>
    <string name="signup">Бүртгэх</string>
    <string name="ok">Зөвшөөрөх</string>
    <string name="cancel">Цуцлах</string>
    <string name="back">Болих</string>
    <string name="filter">Шүүх</string>
    <string name="save">Хадгалах</string>
    <string name="edit">Засах</string>
    <string name="delete">Устгах</string>
    <string name="title_activity_home">Нүүр цонх</string>
    <string name="loadingscreen">Уншиж байна</string>
    <string name="error_invalid_username">Хэрэглэгчийн нэр буруу байна</string>
    <string name="error_invalid_password">Нууц үг буруу байна</string>
    <string name="error_incorrect_password">Нууц үг буруу байна</string>
    <string name="error_field_required">Хоосон байж болохгүй</string>
    <string name="title_section">Нүүр</string>
    <string name="title_section1">Малын өвчин</string>
    <string name="title_section2">Урьдчилан сэргийлэлт</string>
    <string name="title_section3">Шимэгчтэх өвчний эмчилгээ</string>
    <string name="title_section4">Оношилгоо шинжилгээ</string>
    <string name="title_section5">Шилжилт хөдөлгөөн</string>
    <string name="title_section6">Ажилтны жагсаалт</string>
    <string name="title_section7">Тайлан</string>
    <string name="title_section8">Малын өвчин</string>
    <string name="title_section9">Урьдчилсан сэргийлэлт</string>
    <string name="title_section10">Шимэгчтэх өвчний эмчилгээ</string>
    <string name="title_section11">Оношилгоо шинжилгээ</string>
    <string name="title_section12">Шилжилт хөдөлгөөн</string>
    <string name="title_section13">Малын эмчийн жагсаалт</string>
    <string name="title_section14">Тайлангийн жагсаалт</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="hello_blank_fragment">Hүүр цонх</string>
    <string name="id">Дугаар</string>
    <string name="urh_code">Өрхийн код</string>
    <string name="urh_ezen_ner">Өрхийн эзний нэр</string>
    <string name="bag_horoo">Баг/Хороо</string>
    <string name="gazar_ner">Газрын нэр</string>
    <string name="uvchin_turul">Өвчний төрөл</string>
    <string name="uvchin_ner">Өвчний нэр</string>
    <string name="uvchilsun">Өвчилсөн</string>
    <string name="zuvlusun">Зөвлөсөн</string>
    <string name="ustgasan">Устгасан</string>
    <string name="emchilsen">Эмчилсэн</string>
    <string name="edgersen">Эдгэрсэн</string>
    <string name="uhsen">Үхсэн</string>
    <string name="emchilj_baigaa">Эмчилж байгаа</string>
    <string name="horogdson">Хорогдсон</string>
    <string name="mal">Мал</string>
    <string name="honi">Хонь</string>
    <string name="yamaa">Ямаа</string>
    <string name="uher">Үхэр</string>
    <string name="mori">Морь</string>
    <string name="temee">Тэмээ</string>
    <string name="ustgah_arga">Устгал хийхэд ашигласан арга</string>
    <string name="longitude">Уртраг</string>
    <string name="latitude">Өргөрөг</string>
    <string name="date">Огноо</string>
    <string name="date_filter">Огноогоор шүүх</string>
    <string name="type_filter">Төрлөөр шүүх</string>
    <string name="sergiilelt_turul">Сэргийлэлтийн төрөл*</string>
    <string name="darhlaajuulalt">Дархлаажуулалт</string>
    <string name="haldvarguitgel">Халдваргүйтгэл</string>
    <string name="darhlaajuulalt_tuluv">Дархлаажуулалтын төлөв*</string>
    <string name="niit_too">Малчин өрхийн малын тоо*</string>
    <string name="hamragdsan_too">Хамрагдсан малын тоо*</string>
    <string name="darhlaajuulalt_ner">Дархлаажуулалтын нэр</string>
    <string name="vaktsin_nershil">Хэрэглэсэн вакцины нэршил</string>
    <string name="haldvarguitgesen_obekt">Халдваргүйтгэсэн объект</string>
    <string name="emchilgee_turul">Эмчилгээний төрөл*</string>
    <string name="shimegchteh_uvchin_ner">Шимэгчтэх өвчний нэр*</string>
    <string name="shimegchteh_hamragdsan_too">Хамрагдсан малын тоо*</string>
    <string name="beldmel_ner">Хэрэглэсэн бэлдмэлийн нэр*</string>
    <string name="shinjilgee_turul">Шинжилгээний төрөл*</string>
    <string name="sorits_turul">Сорьцын төрөл*</string>
    <string name="sorits_ner">Сорьцын нэр*</string>
    <string name="mal_nas">Сорьцын нас*</string>
    <string name="mal_huis">Сорьцын хүйс*</string>
    <string name="mal_male">Эр*</string>
    <string name="mal_female">Эм*</string>
    <string name="sorits_too">Сорьцын тоо*</string>
    <string name="negj">Сорьцын нэгж*</string>
    <string name="sorits_behjuulsen_arga">Сорьцыг бэхжүүлсэн арга*</string>
    <string name="huleen_avah_baiguullaga">Хүлээн авах байгууллага*</string>
    <string name="ilgeeh_arga">Илгээх арга*</string>
    <string name="shiljilt_turul">Шилжилтийн төрөл*</string>
    <string name="buteegdehuun">Бүтээгдэхүүн</string>
    <string name="hudaldsan_mal_too">Худалдсан малын тоо</string>
    <string name="hudaldsan_buteegdehuun_ner">Худалдсан бүтээгдэхүүний нэр</string>
    <string name="hudaldsan_buteegdehuun_too">Худалдсан бүтээгдэхүүний тоо</string>
    <string name="hudaldsan_buteegdehuun_negj">Худалдсан бүтээгдэхүүний нэгж</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_section_header">Section Header</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>
    <string-array name="aimag_array">
        <item>Архангай</item>
        <item>Баян-Өлгий</item>
        <item>Баянхонгор</item>
        <item>Булган</item>
        <item>Говь-Алтай</item>
        <item>Говьсүмбэр</item>
        <item>Дархан-Уул</item>
        <item>Дорноговь</item>
        <item>Дорнод</item>
        <item>Дундговь</item>
        <item>Завхан</item>
        <item>Орхон</item>
        <item>Өвөрхангай</item>
        <item>Өмнөговь</item>
        <item>Сүхбаатар</item>
        <item>Сэлэнгэ</item>
        <item>Төв</item>
        <item>Увс</item>
        <item>Ховд</item>
        <item>Хөвсгөл</item>
        <item>Хэнтий</item>
        <item>Улаанбаатар</item>
    </string-array>
    <string-array name="sum_array_1">
        <item>Батцэнгэл</item>
        <item>Булган</item>
        <item>Жаргалант</item>
        <item>Ихтамир</item>
        <item>Өгийнуур</item>
        <item>Өлзийт</item>
        <item>Өндөр-Улаан</item>
        <item>Тариат</item>
        <item>Цахир</item>
        <item>Түвшрүүлэх</item>
        <item>Хайрхан</item>
        <item>Хангай</item>
        <item>Хашаат</item>
        <item>Хотонт</item>
        <item>Цэнхэр</item>
        <item>Чулуут</item>
        <item>Эрдэнэбулган</item>
        <item>Эрдэнэмандал</item>
    </string-array>
    <string-array name="sum_array_2">
        <item>Алтай</item>
        <item>Алтанцөгц</item>
        <item>Баяннуур</item>
        <item>Бугат</item>
        <item>Булган</item>
        <item>Буянт</item>
        <item>Дэлгүүн</item>
        <item>Ногооннуур</item>
        <item>Сагсай</item>
        <item>Цагааннуур</item>
        <item>Толбо</item>
        <item>Улаанхус</item>
        <item>Цэнгэл</item>
    </string-array>
    <string-array name="sum_array_3">
        <item>Баянхонгор</item>
        <item>Баацагаан</item>
        <item>Баянбулаг</item>
        <item>Баянговь</item>
        <item>Баянлиг</item>
        <item>Баян-Овоо</item>
        <item>Баян-Өндөр</item>
        <item>Баянцагаан</item>
        <item>Богд</item>
        <item>Бөмбөгөр</item>
        <item>Бууцагаан</item>
        <item>Галуут</item>
        <item>Гурванбулаг</item>
        <item>Жаргалант</item>
        <item>Жинст</item>
        <item>Заг</item>
        <item>Өлзийт</item>
        <item>Хүрээмарал</item>
        <item>Шинэжинст</item>
        <item>Эрдэнэцогт</item>
    </string-array>
    <string-array name="sum_array_4">
        <item>Булган</item>
        <item>Баян-Агт</item>
        <item>Баяннуур</item>
        <item>Бугат</item>
        <item>Бүрэгхангай</item>
        <item>Гурванбулаг</item>
        <item>Дашинчилэн</item>
        <item>Могод</item>
        <item>Орхон</item>
        <item>Рашаант</item>
        <item>Сайхан</item>
        <item>Сэлэнгэ</item>
        <item>Тэшиг</item>
        <item>Хангал</item>
        <item>Хишиг-Өндөр</item>
        <item>Хутаг-Өндөр</item>
    </string-array>
    <string-array name="sum_array_5">
        <item>Алтай</item>
        <item>Баян-Уул</item>
        <item>Бигэр</item>
        <item>Бугат</item>
        <item>Дарви</item>
        <item>Дэлгэр</item>
        <item>Есөнбулаг</item>
        <item>Жаргалан</item>
        <item>Тайшир</item>
        <item>Тонхил</item>
        <item>Төгрөг</item>
        <item>Халиун</item>
        <item>Хөхморьт</item>
        <item>Цогт</item>
        <item>Цээл</item>
        <item>Чандмань</item>
        <item>Шарга</item>
        <item>Эрдэнэ</item>
    </string-array>
    <string-array name="sum_array_6">
        <item>Сүмбэр</item>
        <item>Баянтал</item>
        <item>Шивээговь</item>
    </string-array>
    <string-array name="sum_array_7">
        <item>Дархан</item>
        <item>Хонгор</item>
        <item>Орхон</item>
        <item>Шарынгол</item>
    </string-array>
    <string-array name="sum_array_8">
        <item>Айраг</item>
        <item>Алтанширээ</item>
        <item>Даланжаргалан</item>
        <item>Дэлгэрэх</item>
        <item>Замын-Үүд</item>
        <item>Иххэт</item>
        <item>Мандах</item>
        <item>Өргөн</item>
        <item>Сайхандулаан</item>
        <item>Улаанбадрах</item>
        <item>Хатанбулаг</item>
        <item>Хөвсгөл</item>
        <item>Эрдэнэ</item>
    </string-array>
    <string-array name="sum_array_9">
        <item>Баяндун</item>
        <item>Баянтүмэн</item>
        <item>Баян-Уул</item>
        <item>Булган</item>
        <item>Гурванзагал</item>
        <item>Дашбалбар</item>
        <item>Матад</item>
        <item>Сэргэлэн</item>
        <item>Халхгол</item>
        <item>Хөлөнбуйр</item>
        <item>Хэрлэн</item>
        <item>Цагаан-Овоо</item>
        <item>Чулуунхороот(Эрээнцав)</item>
        <item>Чойбалсан</item>
    </string-array>
    <string-array name="sum_array_10">
        <item>Адаацаг</item>
        <item>Баянжаргалан</item>
        <item>Говь-Угтаал</item>
        <item>Гурвансайхан</item>
        <item>Дэлгэрхангай</item>
        <item>Дэлгэрцогт</item>
        <item>Дэрэн</item>
        <item>Луус</item>
        <item>Өлзийт</item>
        <item>Өндөршил</item>
        <item>Сайхан-Овоо</item>
        <item>Сайнцагаан</item>
        <item>Хулд</item>
        <item>Цагаандэлгэр</item>
        <item>Эрдэнэдалай</item>
    </string-array>
</resources>