<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mebms.mebms.NewShinjilgeeFragment">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/urh_code"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/urh_code" />
                <EditText
                    android:id="@+id/urh_code_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal">
                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/urh_ezen_ner"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/urh_ezen_ner" />
                <EditText
                    android:id="@+id/urh_ezen_ner_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text">
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/bag_horoo"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/bag_horoo" />
                <EditText
                    android:id="@+id/bag_horoo_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal">
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/gazar_ner"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/gazar_ner" />
                <EditText
                    android:id="@+id/gazar_ner_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text">
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/shinjilgee_turul"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/shinjilgee_turul" />
                <Spinner
                    android:id="@+id/shinjilgee_turul_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/sorits_ner"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sorits_ner" />
                <Spinner
                    android:id="@+id/sorits_ner_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/sorits_turul"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sorits_turul" />
                <Spinner
                    android:id="@+id/sorits_turul_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/mal_nas"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/mal_nas" />
                <Spinner
                    android:id="@+id/mal_nas_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/mal_huis"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/mal_huis" />
                <Spinner
                    android:id="@+id/mal_huis_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/sorits_too"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sorits_too" />
                <Spinner
                    android:id="@+id/sorits_too_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/negj"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/negj" />
                <Spinner
                    android:id="@+id/negj_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/sorits_behjuulsen_arga"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:text="@string/sorits_behjuulsen_arga" />
                <EditText
                    android:id="@+id/sorits_behjuulsen_arga_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/huleen_avah_baiguullaga"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:text="@string/huleen_avah_baiguullaga" />
                <Spinner
                    android:id="@+id/huleen_avah_baiguullaga_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/ilgeeh_arga"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:text="@string/ilgeeh_arga" />
                <Spinner
                    android:id="@+id/ilgeeh_arga_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/longitude"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/longitude" />
                <EditText
                    android:id="@+id/longitude_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal">
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/latitude"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/latitude" />
                <EditText
                    android:id="@+id/latitude_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal">
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
                <Button
                    android:id="@+id/shinjilgee_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
    