<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignUpFragment">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.95"
                    android:text="@string/username" />
                <EditText
                    android:id="@+id/username_edt"
                    android:layout_width="203dp"
                    android:layout_height="wrap_content"
                    android:ems="10">
                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.29"
                    android:text="@string/password" />
                <EditText
                    android:id="@+id/password_edt"
                    android:layout_width="206dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="20.08"
                    android:text="@string/repeat_password" />
                <EditText
                    android:id="@+id/repeat_edt"
                    android:layout_width="202dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/lastname"
                    android:layout_width="58dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="12.21"
                    android:text="@string/lastname" />
                <EditText
                    android:id="@+id/lastname_edt"
                    android:layout_width="204dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textCapWords" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/firstname"
                    android:layout_width="58dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="12.21"
                    android:text="@string/firstname" />
                <EditText
                    android:id="@+id/firstname_edt"
                    android:layout_width="204dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textCapWords" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/emch_code"
                    android:layout_width="58dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="12.21"
                    android:text="@string/emch_code" />
                <EditText
                    android:id="@+id/emch_code_edt"
                    android:layout_width="204dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp">
                <TextView
                    android:id="@+id/aimag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.52"
                    android:text="@string/aimag_niislel" />
                <Spinner
                    android:id="@+id/aimag_spinner"
                    android:layout_width="204dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp">
                <TextView
                    android:id="@+id/sum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.52"
                    android:text="@string/sum_duureg" />
                <Spinner
                    android:id="@+id/sum_spinner"
                    android:layout_width="204dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <Button
                    android:id="@+id/ok_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
