<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.example.mebms.mebms.HomeFragment">

    <!-- TODO: Update blank fragment layout -->


    <!--<com.gc.materialdesign.views.ButtonRectangle-->
        <!--android:id="@+id/button"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerInParent="true"-->
        <!--android:background="#1E88E5"-->
        <!--android:text="Button" />-->

    <!--<com.gc.materialdesign.views.ButtonFloatSmall-->
        <!--android:id="@+id/buttonFloatSmall"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerInParent="true"-->
        <!--android:background="#1E88E5"-->
        <!--materialdesign:iconDrawable="@drawable/ic_action_new" />-->

    <!--<com.gc.materialdesign.views.ButtonIcon-->
        <!--android:id="@+id/buttonIcon"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerInParent="true"-->
        <!--android:background="#1E88E5"-->
        <!--materialdesign:iconDrawable="@drawable/ic_next" />-->

    <!--<com.gc.materialdesign.views.ButtonFloat-->
        <!--android:id="@+id/buttonFloat"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_marginRight="24dp"-->
        <!--android:background="#1E88E5"-->
        <!--materialdesign:animate="true"-->
        <!--materialdesign:iconDrawable="@drawable/ic_action_new" />-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_section8"
        android:id="@+id/uvchin_list_btn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_section9"
        android:id="@+id/sergiilelt_list_btn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_section10"
        android:id="@+id/emchilgee_list_btn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_section11"
        android:id="@+id/shinjilgee_list_btn" />

</LinearLayout>
